--- a/index.html
+++ b/index.html
@@ -120,16 +120,17 @@ padding:30px;
 width:230px;
 padding:25px;
 border-radius:18px;
-background:rgba(255,255,255,0.85);
-backdrop-filter:blur(8px);
+background:rgba(212,175,55,0.25);
+backdrop-filter:blur(10px);
 color:#111;
-box-shadow:0 8px 20px rgba(0,0,0,.25);
+box-shadow:0 8px 25px rgba(0,0,0,.35);
 transition:.35s;
 cursor:pointer;
 display:flex;
 flex-direction:column;
 align-items:center;
 text-align:center;
+border:1px solid rgba(255,215,0,0.35);
 }
 
 .card:hover{
@@ -161,6 +162,7 @@ border-radius:12px;
 cursor:pointer;
 color:black;
 font-weight:bold;
+z-index:9999;
 }
 
 #cartBox{
@@ -174,6 +176,7 @@ border-radius:15px;
 display:none;
 width:260px;
 box-shadow:0 10px 30px rgba(0,0,0,.3);
+z-index:9999;
 }
 
 /* MODAL */
